@@ -1,5 +1,6 @@
 1.99.16
 - masks icons are rendered only if not on handheld
+- a bug with P4A_Tab_Pane height was solved
 
 1.99.15
 - some more error messages were put in the code
